update loger changes

--- a/Location/appsettings.json
+++ b/Location/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "backendAPIContext": "Data Source=.;Initial Catalog=LocationHourRangeDb;Integrated Security=True"
+    "backendAPIContext": "Data Source=.\\SQLEXPRESS;Initial Catalog=LocationHourRangeDb;Integrated Security=True"
 
   }
 }
