--- a/Location/nlog.config
+++ b/Location/nlog.config
@@ -3,10 +3,9 @@
 	  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	  autoReload="true"
 	  internalLogLevel="Trace"
-	  internalLogFile="C:\Users\Dev\Desktop\ReactDOTNetProj\Location\Location\Location\Logs\internallog\internallog.txt">
 	<targets>
 		<target name="logfile" xsi:type="File"
-				fileName="C:\Users\Dev\Desktop\ReactDOTNetProj\Location\Location\Location\Logs\${shortdate}_logfile.txt"
+				fileName="${currentdir:cached=true}\Logs\${shortdate}_logfile.txt"
 				layout="${longdate} ${level:uppercase=true} ${message}"/>
 	</targets>
 	<rules>
