update nlog config file

--- a/Location/nlog.config
+++ b/Location/nlog.config
@@ -3,6 +3,7 @@
 	  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	  autoReload="true"
 	  internalLogLevel="Trace"
+	  internalLogFile="C:\Users\Dev\Desktop\ReactDOTNetProj\Location\Location\Location\Logs\internallog\internallog.txt">
 	<targets>
 		<target name="logfile" xsi:type="File"
 				fileName="${currentdir:cached=true}\Logs\${shortdate}_logfile.txt"
